--- a/GEN-AI Project/GenAI_Project (3).ipynb
+++ b/GEN-AI Project/GenAI_Project (3).ipynb
@@ -118,7 +118,7 @@
         "from langchain_groq import ChatGroq\n",
         "llm = ChatGroq(\n",
         "    temperature = 0,\n",
-        "    groq_api_key = \"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\",\n",
+        "    groq_api_key = \"\",\n",
         "    model_name = \"llama-3.3-70b-versatile\"\n",
         ")\n",
         "\n",
@@ -1921,7 +1921,7 @@
         "from langchain_groq import ChatGroq\n",
         "llm = ChatGroq(\n",
         "    temperature = 0,\n",
-        "    groq_api_key = \"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\",\n",
+        "    groq_api_key = \"\",\n",
         "    model_name = \"llama-3.3-70b-versatile\"\n",
         ")\n",
         "\n",
